added buttons and name to navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,14 @@
-<mat-toolbar>
-  <span>Skillio</span>
+<mat-toolbar class="flex justify-between">
+  <div class="left">
+    <span>Skillio</span>
+  </div>
+  <div class="right">
+    <button mat-flat-button class="px-2">
+      <mat-icon>search</mat-icon>
+    </button>
+    <button mat-flat-button class="px-2">
+      <mat-icon>account_circle</mat-icon>
+    </button>
+  </div>
+
 </mat-toolbar>
